--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #! /usr/bin/make -f
 
 %:
-	exec dh $@ --buildsystem=pybuild
+	exec dh $@ --with=python3 --buildsystem=pybuild
 
 override_dh_builddeb:
 	exec dh_builddeb -- -Zxz -z9
