update debian packaging

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ X-Python3-Version: >= 3.5
 Package: python3-hashset
 Architecture: any
 Depends: ${python3:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Provides: ${python3:Provides}
 Description: Create, merge and query sorted binary hashes
  Provides a fast lookup function to query if a hash is in a given file
  (or memory buffer) assuming it contains a pre-sorted concatenated set of
@@ -19,6 +20,7 @@ Description: Create, merge and query sorted binary hashes
 Package: python3-hashset-dbg
 Architecture: any
 Depends: ${python3:Depends}, ${shlibs:Depends}, ${misc:Depends}, python3-hashset (= ${binary:Version})
+Provides: ${python3:Provides}
 Description: Create, merge and query sorted binary hashes
  Provides a fast lookup function to query if a hash is in a given file
  (or memory buffer) assuming it contains a pre-sorted concatenated set of
